@@ -1,3 +1,8 @@
+2007-10-10  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-data.cc:
+	Write URI to ~/.gnome-commander/connetcions files
+
 2007-10-02  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/utils.h:
